# PERx402

./: .env.example  .gitignore  Anchor.toml  CLAUDE.md  Cargo.toml  Dockerfile  README.md  nixpacks.toml  package-lock.json  package.json
.claude/: settings.json
.claude/agents/: anchor-engineer.md  frontend-engineer.md  per-engineer.md  proxy-engineer.md  solana-qa.md
.claude/commands/: build-program.md  demo-prep.md  test-e2e.md
.claude/hooks/: post-bash-check.sh  post-write-lint.sh  pre-deploy-guard.sh
.claude/skills/: per-integration.md  x402-integration.md
.github/workflows/: ci.yml
agent/: package-lock.json  package.json  tsconfig.json
agent/src/: agentA.ts  shadow-fetch.ts
dashboard/: package-lock.json  package.json  tsconfig.tsbuildinfo
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/components/: AgentInfoBar.tsx  AgentSelector.tsx  ConnectionStatus.tsx  PaymentFlow.tsx  PrivateView.tsx  PublicView.tsx  SessionGate.tsx  TransactionStory.tsx  WalletProvider.tsx
dashboard/src/hooks/: useBalance.ts
dashboard/src/lib/: api.ts
docs/: architecture.md
programs/shadow_proxy/: Cargo.toml
programs/shadow_proxy/src/: lib.rs
proxy/: package-lock.json  package.json  tsconfig.json
proxy/src/: anchor-client.ts  interceptor.ts  mock-x402-server.ts  per-client.ts  server.ts  session-manager.ts  shadow_proxy.json
scripts/: demo.sh  fund-devnet.ts
sdk/: README.md  package.json  tsconfig.json
sdk/src/: client.ts  index.ts  shadow-fetch.ts  types.ts
